feat: finish registration method

--- a/Healing/users/templates/register.html
+++ b/Healing/users/templates/register.html
@@ -28,6 +28,15 @@ Cadastro!
                     
                     <form action="{% url 'register' %}" method="POST">{% csrf_token %}
                         <h2 class="fonte-destaque1">Cadastre-se</h2>
+                        
+                        {% if messages %}
+                            {% for message in messages %}
+                                <section class="alert {{message.tags}}">
+                                    {{message}}
+                                </section>
+                            {% endfor %}
+                        {% endif %}
+
                         <br>
                         <label for="">Username</label>
                         <input type="text" name="username" id="" class="form-control" placeholder="Username ...">
