Feat: Add LogIn Page and Functions

--- a/Healing/users/templates/login.html
+++ b/Healing/users/templates/login.html
@@ -1,17 +1,14 @@
 {% extends "base.html" %}
-
 {% load static %}
 
+{% block 'head' %}
+    <link rel="stylesheet" href="{% static 'users/css/users.css' %}">
+{% endblock 'head' %}
 {% block 'title' %}
 
-Cadastro!
+LogIn !
 
-{% endblock %}
-
-{% block 'head' %}
-    <link rel="stylesheet" href="{% static "users/css/users.css" %}">
-{% endblock %}
-
+{% endblock 'title' %}
 {% block 'body' %}
 
     <div class="container-fluid">
@@ -26,10 +23,11 @@ Cadastro!
                     </section>
                     <hr>
                     
-                    <form action="{% url 'register' %}" method="POST">{% csrf_token %}
-                        <h2 class="fonte-destaque1">Cadastre-se</h2>
-                        
+                    <form action="{% url 'login' %}" method="POST">{% csrf_token %}
+                        <h2 class="fonte-destaque1">LogIn</h2>
                         {% if messages %}
+                            <br>
+
                             {% for message in messages %}
                                 <section class="alert {{message.tags}}">
                                     {{message}}
@@ -41,23 +39,11 @@ Cadastro!
                         <label for="">Username</label>
                         <input type="text" name="username" id="" class="form-control" placeholder="Username ...">
                         <br>
-                        <label for="">E-mail</label>
-                        <input type="text" name="email" id="" placeholder="email@email.com" class="form-control">
+                        <label for="">Senha</label>
+                        <input type="password" name="password" class="form-control" placeholder="Digite sua senha ...">
                         <br>
-                        <div class="row">
-                            <div class="col-md">
-                                <label for="">Senha</label>
-                                <input type="password" name="password" class="form-control" placeholder="Digite sua senha ...">
-                            </div>
-                            <div class="col-md">
-                                <label for="">Confirmar senha</label>
-                                <input type="password" name="password_confir" class="form-control" placeholder="Digite sua senha novamente ..." id="">
-                            </div>
-                        </div>
-                        <br>
-
-                        <input type="submit" value="Cadastrar" class="btn btn-success btn-dark-color">
-                        <a href="{% url 'login' %}" class="btn btn-dark-color-outline">Já possuo uma conta</a>
+                        <input type="submit" value="Logar" class="btn btn-success btn-dark-color">
+                        <a href="{% url 'register' %}" class="btn btn-dark-color-outline">Não possuo uma conta</a>
                     </form>
                 </div>
 
@@ -72,3 +58,4 @@ Cadastro!
 
 
 {% endblock 'body' %}
+
